...
                        .foregroundColor(.gray)
                        .font(.system(size: 16.0, weight: .regular, design: .rounded))
                    TextField("City name", text: $text)
                        .font(.system(size: 28.0, weight: .bold, design: .rounded))
                        .foregroundColor(.black)
                        .padding(.init(top: 20.0, leading: 0, bottom: 0, trailing: 0))
                        .accessibilityIdentifier("city_text_field")
                        .focused($isTextFieldFocus)
                    Rectangle()
                        .frame(height: 1.0)
                        .background(.green)
                    HStack(spacing: 20.0) {
                        Spacer()
...
                        Button(
                            action: onSearch,
                            label: {
                                Text("Go")
                                    .frame(width: 64, height: 40)
                                    .font(.system(size: 16.0, weight: .bold, design: .rounded))
                                    .accessibilityIdentifier("go_button")
                            }
                        )
                        .foregroundColor(.white)
                        .background(.green)
                        .cornerRadius(12.0)
                    }
...
